fix lemz&lemzari z-index bug

--- a/src/main/resources/src/components/MainPage/Lepsari/Lepsari.scss
+++ b/src/main/resources/src/components/MainPage/Lepsari/Lepsari.scss
@@ -36,7 +36,7 @@
     padding: 5px 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    z-index: 5;
+    // z-index: 5;
     transition: 0.2s ease-in-out;
     padding-top: 0;
 
